[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/thin_pixelated.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/pixelated.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://themes/curry/curry.tres" type="Theme" id=3]
[ext_resource path="res://scripts/guis/feed_animals.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=10]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 38
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 2 )

[node name="FeedAnimals" type="Control"]
anchor_right = 0.53
anchor_bottom = 0.557
margin_right = 0.0199585
margin_bottom = 0.223969
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MgmtLabel" type="Label" parent="VBoxContainer"]
margin_right = 723.0
margin_bottom = 47.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Feeding Animals"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 723.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="LeftBlock" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 346.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Waste" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/LeftBlock"]
margin_right = 346.0
margin_bottom = 178.0
rect_pivot_offset = Vector2( -345, -102 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
custom_constants/separation = 20

[node name="Waste" type="ColorRect" parent="VBoxContainer/HBoxContainer/LeftBlock/Waste"]
margin_right = 346.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.980392, 0.854902, 0.368627, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/LeftBlock/Waste/Waste"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 11 )
text = "Edible Waste"
align = 1
valign = 1

[node name="Amount" type="ColorRect" parent="VBoxContainer/HBoxContainer/LeftBlock/Waste"]
margin_top = 99.0
margin_right = 346.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InedibleWasteAmnt" type="Label" parent="VBoxContainer/HBoxContainer/LeftBlock/Waste/Amount"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Waste Amount"
align = 1
valign = 1

[node name="Strategy" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/LeftBlock"]
margin_top = 208.0
margin_right = 346.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
custom_constants/separation = 20

[node name="Compost" type="ColorRect" parent="VBoxContainer/HBoxContainer/LeftBlock/Strategy"]
margin_right = 346.0
margin_bottom = 96.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25
color = Color( 0.980392, 0.854902, 0.368627, 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/LeftBlock/Strategy/Compost"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.168627, 0.168627, 0.168627, 1 )
custom_fonts/font = SubResource( 11 )
text = "Feed Animals"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/LeftBlock/Strategy"]
margin_top = 116.0
margin_right = 346.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( -74, 24 )
alignment = 1

[node name="minus" type="Button" parent="VBoxContainer/HBoxContainer/LeftBlock/Strategy/HBoxContainer2"]
margin_right = 67.0
margin_bottom = 52.251
size_flags_horizontal = 3
custom_fonts/font = SubResource( 13 )
text = "-"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/LeftBlock/Strategy/HBoxContainer2"]
margin_left = 71.0
margin_right = 274.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_fonts/font = SubResource( 14 )
align = 1
placeholder_text = "Waste Amount"

[node name="plus" type="Button" parent="VBoxContainer/HBoxContainer/LeftBlock/Strategy/HBoxContainer2"]
margin_left = 278.0
margin_right = 346.0
margin_bottom = 52.251
rect_pivot_offset = Vector2( -71, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 15 )
text = "+"

[node name="Text" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 376.0
margin_right = 723.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Text Info" type="ColorRect" parent="VBoxContainer/HBoxContainer/Text"]
margin_right = 347.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Text/Text Info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Info" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Text/Text Info/MarginContainer"]
margin_right = 327.0
margin_bottom = 252.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 18 )
bbcode_enabled = true
bbcode_text = "Feeding Animals is the act of turning excess food into animal feed. This is usually sent to a farm to become cattle feed. Partner with a local farm in your local area and donate excess food! [tornado radius=2.0 freq=5.0 connected=1][color=green]This is relatively cheap to do and it boosts your restaurants popularity! [/color][/tornado]"
text = "Feeding Animals is the act of turning excess food into animal feed. This is usually sent to a farm to become cattle feed. Partner with a local farm in your local area and donate excess food! This is relatively cheap to do and it boosts your restaurants popularity! "

[node name="ManagementStrategy2" type="Button" parent="VBoxContainer/HBoxContainer/Text"]
margin_top = 297.0
margin_right = 347.0
margin_bottom = 376.251
custom_fonts/font = SubResource( 17 )
text = "Send"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftBlock/Strategy/HBoxContainer2/minus" to="." method="_on_minus_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LeftBlock/Strategy/HBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LeftBlock/Strategy/HBoxContainer2/plus" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Text/ManagementStrategy2" to="." method="_on_sendButton_pressed"]
